--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -1,4 +1,30 @@
-grpcio>=1.74.0
-grpcio-tools>=1.74.0
-protobuf>=4.21.0
-python-dotenv >=1.0.0
+attr==0.3.2
+brotli==1.1.0
+brotlicffi==1.1.0.0
+chardet==5.2.0
+click==8.2.1
+ConfigParser==7.2.0
+cryptography==45.0.7
+docutils==0.22
+filelock==3.19.1
+h2==4.3.0
+HTMLParser==0.0.2
+ipython==9.5.0
+ipywidgets==8.1.7
+jnius==1.1.0
+js==1.0
+keyring==25.6.0
+langchain_core==0.3.76
+langchain_deepseek==0.1.4
+protobuf==6.32.1
+pyodide==0.0.2
+pyOpenSSL==25.2.0
+PyYAML==6.0.2
+redis==6.4.0
+simplejson==3.20.1
+Sphinx==8.2.3
+thread==2.0.5
+typing_extensions==4.15.0
+urllib3_secure_extra==0.1.0
+xmlrpclib==1.0.1
+zstandard==0.25.0
