add ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,24 @@ agent/.venv
 backend/config/config.yaml
 agent/__pycache__/hello_pb2_grpc.cpython-313.pyc
 agent/__pycache__/hello_pb2.cpython-313.pyc
+agent/test/*
+agent/config/__pycache__/__init__.cpython-313.pyc
+agent/config/__pycache__/config.cpython-313.pyc
+agent/config/__pycache__/path.cpython-313.pyc
+agent/src/__pycache__/__init__.cpython-313.pyc
+agent/src/agent/__pycache__/__init__.cpython-313.pyc
+agent/src/agent/tools_factory/__pycache__/__init__.cpython-313.pyc
+agent/src/agent/tools_factory/__pycache__/shell.cpython-313.pyc
+agent/src/agent/tools_factory/__pycache__/tools_registry.cpython-313.pyc
+agent/src/utils/__pycache__/__init__.cpython-313.pyc
+agent/src/utils/__pycache__/logger.cpython-313.pyc
+agent/src/utils/__pycache__/pydantic_v1.cpython-313.pyc
+agent/src/agent/agent_factory/__pycache__/__init__.cpython-313.pyc
+agent/src/agent/agent_factory/__pycache__/agents_registry.cpython-313.pyc
+agent/src/agent/agent_factory/__pycache__/deepseek_agent.cpython-313.pyc
+agent/src/agent/agent_factory/__pycache__/prompt.cpython-313.pyc
+agent/src/agent/agent_factory/__pycache__/qwen_agent.cpython-313.pyc
+agent/src/logs/*
+agent/src/agent/agent_factory/__pycache__/enhanced_executor.cpython-313.pyc
+agent/src/agent/llms/__pycache__/__init__.cpython-313.pyc
+agent/src/agent/llms/__pycache__/llms.cpython-313.pyc
